src/test/deca/syntax/invalid/sansobjet/lex_floathexlimite_valid.deca
// Test limite 
// OK
0x1.0000p-126
0x10.0p-130


